--- a/foundry.toml
+++ b/foundry.toml
@@ -19,3 +19,6 @@ ignore = [
     "src/interfaces/external/**/*.sol",
     "test/**/*.sol"
 ]
+
+[rpc_endpoints]
+mainnet = "https://reth-ethereum.ithaca.xyz/rpc"
